--- a/admin.html
+++ b/admin.html
@@ -4,23 +4,104 @@
   <meta charset="UTF-8" />
   <title>لوحة تحكم SocialBoost</title>
   <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap " rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: 'Tajawal', sans-serif;
+      background: #f7fafc;
+      text-align: center;
+      padding: 4rem;
+    }
+
+    .login-box, .admin-panel {
+      max-width: 500px;
+      margin: auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    input[type="password"] {
+      width: 100%;
+      padding: 0.75rem;
+      margin-top: 1rem;
+      border: 1px solid #cbd5e0;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+    button {
+      margin-top: 1.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #4f46e5;
+      color: white;
+      border: none;
+      border-radius: 9999px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #3730a3;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 1rem;
+    }
+
+    th, td {
+      text-align: right;
+      padding: 0.75rem;
+      border-bottom: 1px solid #edf2f7;
+    }
+
+    input[type="text"] {
+      width: 100%;
+      padding: 0.5rem;
+      border: 1px solid #cbd5e0;
+      border-radius: 4px;
+    }
+  </style>
 </head>
 <body>
 
-<h2 class="text-center">تعديل خدمات المنصات</h2>
+<div id="login-screen" class="login-box">
+  <h2>🔐 تسجيل دخول</h2>
+  <p>من فضلك أدخل كلمة المرور للدخول إلى لوحة التحكم.</p>
+  <input type="password" id="passwordInput" placeholder="كلمة المرور">
+  <button onclick="checkPassword()">🔓 دخول</button>
+</div>
 
-<div id="admin-panel"></div>
-<button onclick="saveData()">💾 حفظ التعديلات</button>
-<a href="index.html">🏠 العودة للموقع</a>
+<div id="admin-panel" class="admin-panel" style="display:none;"></div>
 
 <script src="script.js"></script>
 <script>
-  let data = loadData();
+  const correctPassword = "20061207"; // ← كلمة المرور المحددة
+
+  function checkPassword() {
+    const password = document.getElementById("passwordInput").value.trim();
+    if (password === correctPassword) {
+      document.getElementById("login-screen").style.display = "none";
+      document.getElementById("admin-panel").style.display = "block";
+      renderAdminPanel();
+    } else {
+      alert("❌ كلمة المرور خاطئة");
+    }
+  }
 
   function renderAdminPanel() {
     const panel = document.getElementById('admin-panel');
-    panel.innerHTML = '';
+    panel.innerHTML = `
+      <h2 class="text-center">تعديل خدمات المنصات</h2>
+      <div id="admin-tables"></div>
+      <button onclick="saveData()">💾 حفظ التعديلات</button>
+      <a href="index.html" style="display:block;margin-top:1rem;color:#3b82f6;">🏠 العودة للموقع</a>
+    `;
+
+    const container = document.getElementById('admin-tables');
+    const data = loadData();
 
     for (const [platform, services] of Object.entries(data)) {
       let html = `
@@ -41,13 +122,13 @@
       });
 
       html += `</table></div>`;
-      panel.innerHTML += html;
+      container.innerHTML += html;
     }
   }
 
   function saveData() {
     const inputs = document.querySelectorAll('input');
-    const updated = JSON.parse(JSON.stringify(data));
+    const updated = JSON.parse(JSON.stringify(loadData()));
 
     inputs.forEach(input => {
       const platform = input.getAttribute('data-platform');
@@ -63,11 +144,10 @@
   }
 
   window.onload = () => {
+    const data = loadData();
     if (!data || Object.keys(data).length === 0) {
       localStorage.setItem("serviceData", JSON.stringify(defaultData));
       location.reload();
-    } else {
-      renderAdminPanel();
     }
   };
 </script>
