--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SocialBoost</title>
+
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap " rel="stylesheet">
+
+  <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com "></script>
-  <link rel="stylesheet" href="style.css">
+
   <style>
     body {
       font-family: 'Tajawal', sans-serif;
@@ -74,13 +78,47 @@
 </footer>
 
 <!-- Load Script -->
-<script src="script.js"></script>
 <script>
-  const data = loadData();
+  // البيانات الافتراضية - في حال لم يتم العثور على localStorage
+  const defaultData = {
+    TikTok: [
+      { name: "1000 متابع", description: "زيادة المتابعين بجودة عالية", price: "$5" },
+      { name: "5000 متابع", description: "زيادة كبيرة للمستخدمين", price: "$20" },
+      { name: "10000 متابع", description: "نتائج فورية وفعالة", price: "$35" },
+      { name: "1000 مشاهدة فيديو", description: "مشاهدات طبيعية", price: "$3" },
+      { name: "1000 لايك", description: "إعجابات حقيقية", price: "$2.5" }
+    ],
+    Instagram: [
+      { name: "1000 متابع", description: "متابعين حقيقيين آمنين", price: "$6" },
+      { name: "5000 متابع", description: "زيادة كبيرة للمستخدمين", price: "$25" },
+      { name: "10000 متابع", description: "نتائج مضمونة", price: "$45" },
+      { name: "1000 لايك", description: "إعجابات حقيقية", price: "$3" },
+      { name: "1000 مشاهدة ستوري", description: "مشاهدات فورية للستوري", price: "$2.5" }
+    ],
+    Facebook: [
+      { name: "1000 متابع", description: "زيادة عضويات الصفحة", price: "$5.5" },
+      { name: "5000 متابع", description: "زيادة كبيرة للمستخدمين", price: "$22" },
+      { name: "10000 متابع", description: "زيادة كبيرة للمستخدمين", price: "$40" },
+      { name: "1000 لايك", description: "إعجابات حقيقية", price: "$3" },
+      { name: "1000 مشاركة", description: "مشاركات نشطة وفاعلة", price: "$4" }
+    ],
+    Telegram: [
+      { name: "1000 مشترك", description: "مشتركين حقيقيين", price: "$4" },
+      { name: "5000 مشترك", description: "زيادة كبيرة للمستخدمين", price: "$18" },
+      { name: "10000 مشترك", description: "زيادة كبيرة للمستخدمين", price: "$32" },
+      { name: "1000 مشاهدة", description: "مشاهدات فيديو", price: "$2" },
+      { name: "1000 تعليق", description: "تعليقات حقيقية", price: "$3.5" }
+    ]
+  };
+
+  function loadData() {
+    const saved = localStorage.getItem("serviceData");
+    return saved ? JSON.parse(saved) : defaultData;
+  }
 
   function renderServices() {
     const container = document.getElementById('services-list');
-    container.innerHTML = '';
+    const data = loadData();
 
     const icons = {
       TikTok: "tiktok.png",
@@ -89,6 +127,7 @@
       Telegram: "telegram.png"
     };
 
+    container.innerHTML = '';
     for (const [platform, services] of Object.entries(data)) {
       const firstService = services[0];
       container.innerHTML += `
@@ -103,7 +142,9 @@
 
   function renderPricing() {
     const container = document.getElementById('pricing-list');
+    const data = loadData();
     container.innerHTML = '';
+
     for (const [platform, services] of Object.entries(data)) {
       let html = `
         <div class="bg-white rounded-lg shadow-md overflow-hidden">
@@ -112,6 +153,7 @@
           </div>
           <ul class="divide-y divide-gray-200">
       `;
+
       services.forEach(service => {
         html += `
           <li class="flex justify-between items-center px-6 py-3">
@@ -121,20 +163,17 @@
           <li class="px-6 py-1 text-sm text-gray-500">${service.description}</li>
         `;
       });
+
       html += `</ul></div>`;
       container.innerHTML += html;
     }
   }
 
   window.onload = () => {
-    if (!data || Object.keys(data).length === 0) {
-      localStorage.setItem("serviceData", JSON.stringify(defaultData));
-      location.reload();
-    } else {
-      renderServices();
-      renderPricing();
-    }
+    renderServices();
+    renderPricing();
   };
 </script>
+
 </body>
 </html>
