--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SocialBoost</title>
+  <title>DZTOK STORE</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap " rel="stylesheet">
