--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DZTOK STORE</title>
+  <title> DZTOK STORE </title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap " rel="stylesheet">
@@ -22,7 +22,7 @@
 <!-- Header -->
 <header class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg sticky top-0 z-50">
   <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold">SocialBoost</h1>
+    <h1 class="text-2xl font-bold">DZTOK STORE</h1>
     <nav class="space-x-6 hidden md:flex">
       <a href="#services" class="hover:underline">الخدمات</a>
       <a href="#pricing" class="hover:underline">التسعير</a>
@@ -73,7 +73,7 @@
 <!-- Footer -->
 <footer class="bg-gray-900 text-white py-8">
   <div class="container mx-auto px-4 text-center">
-    <p>© 2025 SocialBoost. جميع الحقوق محفوظة.</p>
+    <p>© 2025 DZTOK STORE. جميع الحقوق محفوظة.</p>
   </div>
 </footer>
 
