--- a/dzadmin.html
+++ b/dzadmin.html
@@ -74,12 +74,12 @@
 <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js "></script>
 
 <script>
-  // إعداد Firebase - استبدل ببيانات مشروعك
+  // إعداد Firebase - استبدل هذه القيم ببيانات مشروعك
   const firebaseConfig = {
     apiKey: "YOUR_API_KEY",
     authDomain: "your-project.firebaseapp.com",
     databaseURL: "https://your-project-default-rtdb.firebaseio.com/ ",
-    projectId: "your-project",
+    projectId: "your-project-id",
     storageBucket: "your-project.appspot.com",
     messagingSenderId: "YOUR_SENDER_ID",
     appId: "YOUR_APP_ID"
