--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js "></script>
 
 <script>
-  // إعداد Firebase - استبدل ببيانات مشروعك
+  // إعداد Firebase - استبدل هذه القيم ببيانات مشروعك
   const firebaseConfig = {
     apiKey: "YOUR_API_KEY",
     authDomain: "your-project.firebaseapp.com",
