--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 <script>
   // إعداد Firebase - استبدل هذه القيم ببيانات مشروعك
   const firebaseConfig = {
-    apiKey: "YOUR_API_KEY",
-    authDomain: "your-project.firebaseapp.com",
-    databaseURL: "https://your-project-default-rtdb.firebaseio.com/ ",
-    projectId: "your-project-id",
-    storageBucket: "your-project.appspot.com",
-    messagingSenderId: "YOUR_SENDER_ID",
-    appId: "YOUR_APP_ID"
+     apiKey: "AIzaSyBrxvmLY9TB-uctjgzh75CJTJ3tACPEQlU",
+  authDomain: "socialboost-admin.firebaseapp.com",
+  databaseURL: "https://socialboost-admin-default-rtdb.firebaseio.com",
+  projectId: "socialboost-admin",
+  storageBucket: "socialboost-admin.firebasestorage.app",
+  messagingSenderId: "1054042174917",
+  appId: "1:1054042174917:web:bc923ca8a5dbbdacdd87ac",
   };
 
   firebase.initializeApp(firebaseConfig);
