--- a/dzadmin.html
+++ b/dzadmin.html
@@ -75,15 +75,16 @@
 
 <script>
   // إعداد Firebase - استبدل هذه القيم ببيانات مشروعك
-  const firebaseConfig = {
-     apiKey: "AIzaSyBrxvmLY9TB-uctjgzh75CJTJ3tACPEQlU",
+ const firebaseConfig = {
+  apiKey: "AIzaSyBrxvmLY9TB-uctjgzh75CJTJ3tACPEQlU",
   authDomain: "socialboost-admin.firebaseapp.com",
   databaseURL: "https://socialboost-admin-default-rtdb.firebaseio.com",
   projectId: "socialboost-admin",
   storageBucket: "socialboost-admin.firebasestorage.app",
   messagingSenderId: "1054042174917",
   appId: "1:1054042174917:web:bc923ca8a5dbbdacdd87ac",
-  };
+  measurementId: "G-7Y9PC4L5GS"
+};
 
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
