--- a/index.html
+++ b/index.html
@@ -1,103 +1,29 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SocialBoost</title>
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap " rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com "></script>
-  <style>
-    body {
-      font-family: 'Tajawal', sans-serif;
-    }
-  </style>
-</head>
-<body class="antialiased">
-
-<!-- Header -->
-<header class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg sticky top-0 z-50">
-  <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold">SocialBoost</h1>
-    <nav class="space-x-6 hidden md:flex">
-      <a href="#services" class="hover:underline">الخدمات</a>
-      <a href="#pricing" class="hover:underline">التسعير</a>
-    </nav>
-  </div>
-</header>
-
-<!-- Hero Section -->
-<section class="bg-gradient-to-br from-blue-50 to-purple-50 py-20 text-center">
-  <div class="container mx-auto px-4">
-    <h2 class="text-4xl md:text-5xl font-extrabold mb-6 leading-tight">
-      خدمات زيادة المتابعين والمشاهدات
-    </h2>
-    <p class="text-lg md:text-xl text-gray-700 mb-8 max-w-3xl mx-auto">
-      أسعار تنافسية ونتائج مضمونة على TikTok, Instagram, Facebook & Telegram.
-    </p>
-  </div>
-</section>
-
-<!-- Services Section -->
-<section id="services" class="py-20 bg-white">
-  <div class="container mx-auto px-4">
-    <h3 class="text-3xl font-bold text-center mb-12">منصاتنا</h3>
-    <div id="services-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8"></div>
-  </div>
-</section>
-
-<!-- Pricing Section -->
-<section id="pricing" class="py-20 bg-gray-50">
-  <div class="container mx-auto px-4">
-    <h3 class="text-3xl font-bold text-center mb-12">أسعار الخدمات</h3>
-    <div id="pricing-list" class="grid grid-cols-1 md:grid-cols-2 gap-8"></div>
-  </div>
-</section>
-
-<!-- Request Service Button -->
-<section class="py-20 bg-white text-center">
-  <div class="container mx-auto px-4">
-    <h3 class="text-2xl md:text-3xl font-bold mb-6">هل تحب ما تراه؟ ابدأ الآن!</h3>
-    <p class="text-gray-600 mb-8 max-w-xl mx-auto">يمكنك طلب أي خدمة مباشرة عبر تيليجرام من خلال الضغط على الزر أدناه.</p>
-    <a href="https://t.me/socialmedia_sale " target="_blank" rel="noopener noreferrer"
-       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-8 py-3 rounded-full shadow-lg transform transition hover:scale-105">
-      💬 اطلب الخدمة على تيليجرام
-    </a>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="bg-gray-900 text-white py-8">
-  <div class="container mx-auto px-4 text-center">
-    <p>© 2025 SocialBoost. جميع الحقوق محفوظة.</p>
-  </div>
-</footer>
-
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js "></script>
-<script src="https://www.gstatic7.com/firebasejs/9.6.10/firebase-database-compat.js </script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js </script>
 
 <script>
-  // إعداد Firebase - استبدل هذه القيم ببيانات مشروعك
- const firebaseConfig = {
-  apiKey: "AIzaSyBrxvmLY9TB-uctjgzh75CJTJ3tACPEQlU",
-  authDomain: "socialboost-admin.firebaseapp.com",
-  databaseURL: "https://socialboost-admin-default-rtdb.firebaseio.com",
-  projectId: "socialboost-admin",
-  storageBucket: "socialboost-admin.firebasestorage.app",
-  messagingSenderId: "1054042174917",
-  appId: "1:1054042174917:web:bc923ca8a5dbbdacdd87ac",
-  measurementId: "G-7Y9PC4L5GS"
-};
+  // إعداد Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyBrxvmLY9TB-uctjgzh75CJTJ3tACPEQlU",
+    authDomain: "socialboost-admin.firebaseapp.com",
+    databaseURL: "https://socialboost-admin-default-rtdb.firebaseio.com/ ",
+    projectId: "socialboost-admin",
+    storageBucket: "socialboost-admin.firebasestorage.app",
+    messagingSenderId: "1054042174917",
+    appId: "1:1054042174917:web:bc923ca8a5dbbdacdd87ac"
+  };
 
-
+  // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const database = firebase.database();
 
   function loadData(callback) {
-    firebase.database().ref('serviceData').on('value', snapshot => {
+    firebase.database().ref('serviceData').once('value').then(snapshot => {
       const data = snapshot.val();
-      renderServices(data || defaultData);
-      renderPricing(data || defaultData);
+      callback(data || defaultData);
+    }).catch(() => {
+      callback(defaultData);
     });
   }
 
@@ -189,6 +115,3 @@
     });
   };
 </script>
-
-</body>
-</html>
