--- a/dzadmin.html
+++ b/dzadmin.html
@@ -71,10 +71,10 @@
 
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js "></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js "></script>
+<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js </script>
 
 <script>
-  // إعداد Firebase ← استخدم بيانات المشروع التي أرسلتها
+  // إعداد Firebase ← تم استخدام بيانات مشروعك
   const firebaseConfig = {
     apiKey: "AIzaSyBrxvmLY9TB-uctjgzh75CJTJ3tACPEQlU",
     authDomain: "socialboost-admin.firebaseapp.com",
@@ -82,15 +82,14 @@
     projectId: "socialboost-admin",
     storageBucket: "socialboost-admin.firebasestorage.app",
     messagingSenderId: "1054042174917",
-    appId: "1:1054042174917:web:bc923ca8a5dbbdacdd87ac",
-    measurementId: "G-7Y9PC4L5GS"
+    appId: "1:1054042174917:web:bc923ca8a5dbbdacdd87ac"
   };
 
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const database = firebase.database();
 
-  const correctPassword = "20061207"; // ← كلمة المرور الخاصة بك
+  const correctPassword = "20061207"; // ← كلمة المرور التي حددتها
 
   function checkPassword() {
     const password = document.getElementById("passwordInput").value.trim();
@@ -152,7 +151,7 @@
       }
     });
 
-    // ✅ سيتم حفظ البيانات على الإنترنت باستخدام Firebase
+    // ✅ سيتم حفظ البيانات على الإنترنت
     firebase.database().ref('serviceData').set(updated).then(() => {
       alert("✅ تم الحفظ بنجاح!");
     }).catch(err => {
