--- a/index.html
+++ b/index.html
@@ -1,197 +1,56 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SocialBoost</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal&display=swap " rel="stylesheet">
-
-  <!-- Tailwind CSS CDN -->
-  <script src="https://cdn.tailwindcss.com "></script>
-
-  <style>
-    body {
-      font-family: 'Tajawal', sans-serif;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>DZ TOK - منتجات رقمية وتنمية حسابات التواصل الاجتماعي</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="antialiased">
-
-<!-- Header -->
-<header class="bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg sticky top-0 z-50">
-  <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold">SocialBoost</h1>
-    <nav class="space-x-6 hidden md:flex">
-      <a href="#services" class="hover:underline">الخدمات</a>
-      <a href="#pricing" class="hover:underline">التسعير</a>
-    </nav>
-  </div>
-</header>
-
-<!-- Hero Section -->
-<section class="bg-gradient-to-br from-blue-50 to-purple-50 py-20 text-center">
-  <div class="container mx-auto px-4">
-    <h2 class="text-4xl md:text-5xl font-extrabold mb-6 leading-tight">
-      خدمات زيادة المتابعين والمشاهدات
-    </h2>
-    <p class="text-lg md:text-xl text-gray-700 mb-8 max-w-3xl mx-auto">
-      أسعار تنافسية ونتائج مضمونة على TikTok, Instagram, Facebook & Telegram.
-    </p>
-  </div>
-</section>
-
-<!-- Services Section -->
-<section id="services" class="py-20 bg-white">
-  <div class="container mx-auto px-4">
-    <h3 class="text-3xl font-bold text-center mb-12">منصاتنا</h3>
-    <div id="services-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8"></div>
-  </div>
-</section>
-
-<!-- Pricing Section -->
-<section id="pricing" class="py-20 bg-gray-50">
-  <div class="container mx-auto px-4">
-    <h3 class="text-3xl font-bold text-center mb-12">أسعار الخدمات</h3>
-    <div id="pricing-list" class="grid grid-cols-1 md:grid-cols-2 gap-8"></div>
-  </div>
-</section>
-
-<!-- Request Service Button -->
-<section class="py-20 bg-white text-center">
-  <div class="container mx-auto px-4">
-    <h3 class="text-2xl md:text-3xl font-bold mb-6">هل تحب ما تراه؟ ابدأ الآن!</h3>
-    <p class="text-gray-600 mb-8 max-w-xl mx-auto">يمكنك طلب أي خدمة مباشرة عبر تيليجرام من خلال الضغط على الزر أدناه.</p>
-    <a href="https://t.me/socialmedia_sale " target="_blank" rel="noopener noreferrer"
-       class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold px-8 py-3 rounded-full shadow-lg transform transition hover:scale-105">
-      💬 اطلب الخدمة على تيليجرام
-    </a>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="bg-gray-900 text-white py-8">
-  <div class="container mx-auto px-4 text-center">
-    <p>© 2025 SocialBoost. جميع الحقوق محفوظة.</p>
-  </div>
-</footer>
-
-<!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js "></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js "></script>
-
-<script>
-  // إعداد Firebase ← تم استخدام بيانات مشروعك
-  const firebaseConfig = {
-    apiKey: "AIzaSyBrxvmLY9TB-uctjgzh75CJTJ3tACPEQlU",
-    authDomain: "socialboost-admin.firebaseapp.com",
-    databaseURL: "https://socialboost-admin-default-rtdb.firebaseio.com/ ",
-    projectId: "socialboost-admin",
-    storageBucket: "socialboost-admin.firebasestorage.app",
-    messagingSenderId: "1054042174917",
-    appId: "1:1054042174917:web:bc923ca8a5dbbdacdd87ac"
-  };
-
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  const database = firebase.database();
-
-  function loadData(callback) {
-    firebase.database().ref('serviceData').on('value', snapshot => {
-      const data = snapshot.val();
-      callback(data || defaultData);
-    });
-  }
-
-  function renderServices(data) {
-    const container = document.getElementById('services-list');
-    const icons = {
-      TikTok: "tiktok.png",
-      Instagram: "instagram.png",
-      Facebook: "facebook.png",
-      Telegram: "telegram.png"
-    };
-
-    container.innerHTML = '';
-    for (const [platform, services] of Object.entries(data)) {
-      const firstService = services[0];
-      container.innerHTML += `
-        <div class="bg-gray-100 p-6 rounded-lg shadow-md hover:shadow-xl transition text-center">
-          <img src="${icons[platform]}" alt="${platform}" class="w-12 h-12 mx-auto mb-4 object-cover rounded-full border-2 border-white shadow">
-          <h4 class="text-xl font-bold mb-3">${platform}</h4>
-          <p class="text-sm text-gray-600">${firstService.description}</p>
+<body>
+    <!-- Header -->
+    <header>
+        <div class="logo">
+            <h1>DZ TOK</h1>
         </div>
-      `;
-    }
-  }
+        <nav>
+            <ul>
+                <li><a href="#about">من نحن</a></li>
+                <li><a href="#services">خدماتنا</a></li>
+                <li><a href="#contact">اتصل بنا</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  function renderPricing(data) {
-    const container = document.getElementById('pricing-list');
-    container.innerHTML = '';
+    <!-- Hero Section -->
+    <section id="hero">
+        <div class="hero-content">
+            <h2>منتجات رقمية وتنمية حسابات التواصل الاجتماعي...</h2>
+            <p>www.dztok.xyz</p>
+        </div>
+        <div class="hero-image">
+            <img src="https://via.placeholder.com/500x500?text=Icons+Image " alt="Icons Image">
+        </div>
+    </section>
 
-    for (const [platform, services] of Object.entries(data)) {
-      let html = `
-        <div class="bg-white rounded-lg shadow-md overflow-hidden">
-          <div class="bg-purple-600 text-white px-6 py-4">
-            <h4 class="text-xl font-bold">${platform}</h4>
-          </div>
-          <ul class="divide-y divide-gray-200">
-      `;
+    <!-- Services Section -->
+    <section id="services">
+        <h2>خدماتنا</h2>
+        <div class="service-grid">
+            <div class="service-item">
+                <img src="https://via.placeholder.com/300x200?text= تنمية+التواصل" alt="تنمية مواقع التواصل">
+                <h3>تنمية مواقع التواصل</h3>
+                <p>نقدم خدمات تنمية الحسابات على منصات التواصل الاجتماعي لزيادة التفاعل والجمهور.</p>
+            </div>
+            <div class="service-item">
+                <img src="https://via.placeholder.com/300x200?text= اشتراكات+بريميوم" alt="اشتراكات بريميوم">
+                <h3>اشتراكات وتفعيلات بريميوم</h3>
+                <p>نوفر اشتراكات وتفعيلات بريميوم لتحسين أدائك الرقمي وتحقيق النجاح.</p>
+            </div>
+        </div>
+    </section>
 
-      services.forEach(service => {
-        html += `
-          <li class="flex justify-between items-center px-6 py-3">
-            <span>${service.name}</span>
-            <span class="font-semibold text-purple-600">${service.price}</span>
-          </li>
-          <li class="px-6 py-1 text-sm text-gray-500">${service.description}</li>
-        `;
-      });
-
-      html += `</ul></div>`;
-      container.innerHTML += html;
-    }
-  }
-
-  const defaultData = {
-    TikTok: [
-      { name: "1000 متابع", description: "زيادة المتابعين بجودة عالية", price: "$5" },
-      { name: "5000 متابع", description: "زيادة كبيرة للمستخدمين", price: "$20" },
-      { name: "10000 متابع", description: "نتائج فورية وفعالة", price: "$35" },
-      { name: "1000 مشاهدة فيديو", description: "مشاهدات طبيعية", price: "$3" },
-      { name: "1000 لايك", description: "إعجابات حقيقية", price: "$2.5" }
-    ],
-    Instagram: [
-      { name: "1000 متابع", description: "متابعين حقيقيين آمنين", price: "$6" },
-      { name: "5000 متابع", description: "زيادة كبيرة للمستخدمين", price: "$25" },
-      { name: "10000 متابع", description: "نتائج مضمونة", price: "$45" },
-      { name: "1000 لايك", description: "إعجابات حقيقية", price: "$3" },
-      { name: "1000 مشاهدة ستوري", description: "مشاهدات فورية للستوري", price: "$2.5" }
-    ],
-    Facebook: [
-      { name: "1000 متابع", description: "زيادة عضويات الصفحة", price: "$5.5" },
-      { name: "5000 متابع", description: "زيادة كبيرة للمستخدمين", price: "$22" },
-      { name: "10000 متابع", description: "زيادة كبيرة للمستخدمين", price: "$40" },
-      { name: "1000 لايك", description: "إعجابات حقيقية", price: "$3" },
-      { name: "1000 مشاركة", description: "مشاركات نشطة وفاعلة", price: "$4" }
-    ],
-    Telegram: [
-      { name: "1000 مشترك", description: "مشتركين حقيقيين", price: "$4" },
-      { name: "5000 مشترك", description: "زيادة كبيرة للمستخدمين", price: "$18" },
-      { name: "10000 مشترك", description: "زيادة كبيرة للمستخدمين", price: "$32" },
-      { name: "1000 مشاهدة", description: "مشاهدات فيديو", price: "$2" },
-      { name: "1000 تعليق", description: "تعليقات حقيقية", price: "$3.5" }
-    ]
-  };
-
-  window.onload = () => {
-    loadData(data => {
-      renderServices(data);
-      renderPricing(data);
-    });
-  };
-</script>
-
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2023 DZ TOK. جميع الحقوق محفوظة.</p>
+    </footer>
 </body>
 </html>
