--- a/index.html
+++ b/index.html
@@ -2,55 +2,23 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <title>DZ TOK - منتجات رقمية وتنمية حسابات التواصل الاجتماعي</title>
-    <link rel="stylesheet" href="style.css">
+    <title>عرض صورة</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        img {
+            max-width: 100%;
+            max-height: 100vh;
+        }
+    </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="logo">
-            <h1>DZ TOK</h1>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#about">من نحن</a></li>
-                <li><a href="#services">خدماتنا</a></li>
-                <li><a href="#contact">اتصل بنا</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <section id="hero">
-        <div class="hero-content">
-            <h2>منتجات رقمية وتنمية حسابات التواصل الاجتماعي...</h2>
-            <p>www.dztok.xyz</p>
-        </div>
-        <div class="hero-image">
-            <img src="https://via.placeholder.com/500x500?text=Icons+Image " alt="Icons Image">
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services">
-        <h2>خدماتنا</h2>
-        <div class="service-grid">
-            <div class="service-item">
-                <img src="https://via.placeholder.com/300x200?text= تنمية+التواصل" alt="تنمية مواقع التواصل">
-                <h3>تنمية مواقع التواصل</h3>
-                <p>نقدم خدمات تنمية الحسابات على منصات التواصل الاجتماعي لزيادة التفاعل والجمهور.</p>
-            </div>
-            <div class="service-item">
-                <img src="https://via.placeholder.com/300x200?text= اشتراكات+بريميوم" alt="اشتراكات بريميوم">
-                <h3>اشتراكات وتفعيلات بريميوم</h3>
-                <p>نوفر اشتراكات وتفعيلات بريميوم لتحسين أدائك الرقمي وتحقيق النجاح.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <p>&copy; 2023 DZ TOK. جميع الحقوق محفوظة.</p>
-    </footer>
+    <img src="https://www.dztok.xyz/main.png " alt="الصورة الرئيسية">
 </body>
 </html>
